python-defaults (2.7.3-3) UNRELEASED; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - no longer sensitive to trailing slash in private dir names
      (closes: #686358)
    - ignore /usr/bin/python3 shebangs in all packages, not just in
      python3-* ones
    - TODO: parse interpreter version number from --shebang option and add
      apropriate dependency/rt* script arguments

  [ Dmitry Shachnev ]
  * debian/python.{pre,post}rm.in: Handle purge command the same way as
    remove (thanks to Mitsuya Shibata for the bug report)

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 31 Aug 2012 18:06:26 +0200

python-defaults (2.7.3-2) unstable; urgency=low

  * dh_python2: ignore empty files while trying to normalize shebangs
    (Closes: #680793)
  * Fix lack of python-imaging in pydist/dist_fallback
    - Add python-imaging override to pydist/generate_fallback_list.py
    - pydist/dist_fallback: Regenerate to add python-imaging (which wasn't
      recognized before due to .pth file) along with a few automatic
      adjustments 

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 26 Jul 2012 23:03:32 +0200

python-defaults (2.7.3-1) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - remove even more \.so.* dangling symlinks, thanks to Stefano
      Rivera for providing a test case
    - rewrite shebangs by default (disable via --no-shebang-rewrite),
      examples:
       + "/usr/bin/env python*" → "/usr/bin/python*"
       + "/usr/local/bin/python foo" → "/usr/bin/python foo"
       + "/usr/bin/python2" → "/usr/bin/python"
    - new --shebang option to replace all shebangs in bin dirs
      (example: --shebang /usr/bin/python2.6)
    - no longer generates python2.X | python2.Y depenendies for public modules
      (Closes: 625740)
    - translate Python version numbers into Debian ones for those
      require.txt items that have a pydist file with (uscan like) rules
      or PEP386 flag (Closes: #653740)